--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5/swagger-ui.css"/>
-<link rel="shortcut icon" href="./img/wegotour.png" type="image/x-icon">  <!--untuk incon -->
+<link rel="shortcut icon" href="./img/wegotour.png" type="image/x-icon">
 <title>Wegotour API Documentation dari Cloud Function</title>
     </head>
     <body>
